[package]
name = "unixtools"
version = "0.1.0"
authors = ["manuel <manuel@ezono.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
toolslib = { path = "toolslib" }
clap = "2"
regex = "1.4.5"
procfs = "0.9.1"
users = "0.11.0"
